--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><title>StockApp</title><base href="https://cmvirtusio.github.io/stockApp/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/x-icon" href="favicon.ico"><link href="styles.d3655f5a18ee2c37a279.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><script type="text/javascript" src="inline.318b50c57b4eba3d437b.bundle.js"></script><script type="text/javascript" src="polyfills.194f3db5c95bb635c66b.bundle.js"></script><script type="text/javascript" src="main.78b7c81c63c85d18eb29.bundle.js"></script></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>PortfolioSolutions</title>
+  <base href="https://cmvirtusio.github.io/stockApp/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="styles.3ff695c00d717f2d2a11.css"></head>
+<body>
+  <app-root></app-root>
+<script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="es2015-polyfills.c5dd28b362270c767b34.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="main.f51abdfeb83dbe94d0de.js"></script></body>
+</html>
